[build-system]
requires = [
  "setuptools >= 61.2",
  "wheel >= 0.36.2",
  "Cython>=3.0.3",
  "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = [
  'py39',
  'py310',
  'py311',
]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
combine_as_imports = true
