[metadata]
name = yt_idv
version = 0.3.1
description = Interactive Volume Rendering for yt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yt-project/yt_idv
author = Matthew Turk
author_email = matthewturk@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = yt_idv

[options]
packages = find:
install_requires =
    Click>=7.0
    imgui>=1.2.0
    matplotlib>=3.0
    numpy>=1.18.0
    pyOpenGL>=3.1.5
    pyglet>=2.0.dev0
    pyyaml>=5.3.1
    traitlets>=5.0.5
    traittypes>=0.2.1
    yt>=4.1.0
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    yt_idv
    yt_idv.*

[options.entry_points]
console_scripts =
    yt_idv=yt_idv.cli:main

[options.extras_require]
dev =
    Sphinx==1.8.5
    twine==1.14.0
    wheel==0.33.6
test =
    PyOpenGL-accelerate
    pytest>=6.2.4
    pytest-html

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = docs,
    */__init__.py
ignore =
    E203,
    E231,
    E266,
    E302,
    E306,
    E741,
    W503,
    W605,
    B302,

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
